spacing fix

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 .info h1 {
   font-size: 8rem;
-  margin-top: 10rem;
+  margin-top: 14rem;
   padding-left: 15px;
 }
 
@@ -54,7 +54,7 @@ body {
 .date {
   font-weight: bold;
   font-size: 3.5rem;
-  margin-top: 54rem;
+  margin-top: 50rem;
   padding-left: 15px;
 }
 
